Fixed : - Constants in CandidateValidator class - Simplified collect to List method - Used ternary operator in getWorkablePeople method against if-else block